policies/kyverno/rules/pod-label-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-pod-label
  annotations:
    policies.kyverno.io/title: Validate Team Pod Label
    policies.kyverno.io/category: Multitenancy, Multicluster-Management
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/subject: Group
    policies.kyverno.io/description: >-
      Denies the creation of a pod if the label of the pod does
      not contain the team label
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: pod-team-label
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - bsa-*
          operations:
          - UPDATE
          - CREATE
    exclude:
      any:
      - clusterRoles:
        - cluster-admin
    validate:
      message: The team label is required to create the deployment
      pattern:
        metadata:
          labels:
            team: "?*"
